--- a/UI/Website/styles/menu.css
+++ b/UI/Website/styles/menu.css
@@ -12,6 +12,7 @@
     align-items: start;
 }
 .left-top-menu{
+    z-index: 10;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -38,4 +39,56 @@
 }
 .menu-item-hide{
     transform: translateX(-100px);
+}
+
+.mid-main-frame{
+    z-index: 8;
+    position: absolute;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    width: 100vw;
+    top:10px;
+    left: 0px;
+}
+.menu-mid{
+    position: relative;
+    scale: 0;
+    opacity: 0.5;
+    transform: translateY(-200px);
+    transition: 0.5s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 10px 10px 0px 10px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #F9F7C9;
+    /* background-color: red; */
+}
+.menu-mid img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+
+}
+.menu-mid-act{
+    scale: 1;
+    transform: translateY(0px);
+    opacity: 1;
+}
+.menu-close{
+    position: absolute;
+    bottom: 0px;
+    transform: translateY(49px);
+    padding: 5px;
+    background-color: #F9F7C9;
+    border-radius: 0% 0% 50% 50%;
+}
+.menu-close img{
+    width: 100%;
+    aspect-ratio: 1.2;
+    border-radius: 0% 0% 50% 50%;
 }
